schema/testdata/errors/enum_default_multiple_conditions.keel
model Post {
    fields {
        //expect-error:36:49:E049:expression should have a single value
        published Boolean @default(true or false)
    }
}
